[gd_scene load_steps=3 format=3 uid="uid://b8k3m7n5p2qr9"]

[ext_resource type="Script" path="res://scenes/ui/wave_complete_screen.gd" id="1_wave_complete_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_bg"]
bg_color = Color(0, 0, 0, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="WaveCompleteScreen" type="Panel" groups=["wave_complete_screen"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_bg")
script = ExtResource("1_wave_complete_script")


[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="VictoryLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Wave 1 Complete!"
horizontal_alignment = 1

[node name="StatsDisplay" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HubButton" type="Button" parent="Content/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return to Hub"

[node name="NextWaveButton" type="Button" parent="Content/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Next Wave"
